appId: com.anonymous.pocketenvelopes
---
- launchApp:
    clearState: true
- tapOn: "Não tem conta? Cadastre-se aqui"
- tapOn: "Seu Nome"
- inputText: "Onaza"
- tapOn: "E-mail"
- inputText: ${email}
- tapOn: "Senha"
- inputText: ${password}
- tapOn: "Confirmar Senha"
- inputText: ${password}
- tapOn:
    id: "0_resource_name_obfuscated"
    index: 50
- doubleTapOn: "Cadastrar"
- doubleTapOn: "E-mail"
- inputText: ${email}
- tapOn: "Senha"
- inputText: ${password}
- tapOn:
    id: "0_resource_name_obfuscated"
    index: 50
- tapOn: "Entrar"